[package]
name = "fastembed"
version = "5.5.0"
edition = "2021"
description = "Library for generating vector embeddings, reranking locally."
license = "Apache-2.0"
authors = [
  "Anush008 <anushshetty90@gmail.com>",
  "Josh Niemelä <josh@jniemela.dk>",
  "GrisiaEvy <a115020115@gmail.com>",
  "George MacKerron <georgemackerron@neon.tech>",
  "Timon Vonk <mail@timonv.nl>",
  "Luya Wang <luya.wang@qq.com>",
  "Tri <tri@triandco.com>",
  "Denny Wong <denwong47@hotmail.com>",
  "Alex Rozgo <alex.rozgo@gmail.com>",
]
documentation = "https://docs.rs/fastembed"
repository = "https://github.com/Anush008/fastembed-rs"
homepage = "https://crates.io/crates/fastembed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
hf-hub = { version = "0.4.1", default-features = false, optional = true }
image = { version = "0.25.2", optional = true }
ndarray = { version = "0.16", default-features = false }
ort = { version = "=2.0.0-rc.10", default-features = false, features = [
  "ndarray", "std"
] }
serde_json = { version = "1" }
tokenizers = { version = "0.22.0", default-features = false, features = ["onig"] }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
rand_distr = { version = "0.4", optional = true }

[features]
default = ["ort-download-binaries", "hf-hub-native-tls", "image-models"]

hf-hub = ["dep:hf-hub", "hf-hub?/ureq"]
hf-hub-native-tls = ["hf-hub", "hf-hub?/native-tls"]
hf-hub-rustls-tls = ["hf-hub", "hf-hub?/rustls-tls"]

ort-download-binaries = ["ort/download-binaries"]
ort-load-dynamic = ["ort/load-dynamic"]

image-models = ["image"]

# MUVERA post-processing support
muvera = ["dep:rand", "dep:rand_chacha", "dep:rand_distr"]

# This feature does not change any code, but is used to limit tests if
# the user does not have `optimum-cli` or even python installed.
optimum-cli = []

# For compatibility recommend using hf-hub-native-tls
online = ["hf-hub-native-tls"]

[[examples]]
name = "muvera_demo"
features = ["hf-hub", "muvera"]

[[examples]]
name = "beir_scidocs_benchmark"
features = ["hf-hub", "muvera"]
